crates/parser/tests/cases/snapshots/cases__parse_ast__stmt_aug_mod.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_aug_mod), functions::parse_stmt, \"x %= y\")"

---
Node(
  kind: AugAssign(
    target: Node(
      kind: Name("x"),
      span: Span(
        start: 0,
        end: 1,
      ),
    ),
    op: Node(
      kind: Mod,
      span: Span(
        start: 2,
        end: 4,
      ),
    ),
    value: Node(
      kind: Name("y"),
      span: Span(
        start: 5,
        end: 6,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 6,
  ),
)
