crates/parser/tests/cases/snapshots/cases__parse_ast__stmt_aug_rsh.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_aug_rsh), functions::parse_stmt, \"x >>= y\")"

---
Node(
  kind: AugAssign(
    target: Node(
      kind: Name("x"),
      span: Span(
        start: 0,
        end: 1,
      ),
    ),
    op: Node(
      kind: RShift,
      span: Span(
        start: 2,
        end: 5,
      ),
    ),
    value: Node(
      kind: Name("y"),
      span: Span(
        start: 6,
        end: 7,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 7,
  ),
)
